...
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:context=".ui.main.MainActivity">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_add_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="h,4:3"
...
                android:textAlignment="viewStart"
                android:inputType="textMultiLine"
                android:hint="@string/hint_story_add"
                android:ems="10" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_save_souvenir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_story"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{clickListener::onSaveSouvenirClicked}"
...
