...
                    android:textAppearance="?attr/textAppearanceSmallHeader"
                    android:text="@{@string/main_numSouvenirs(viewmodel.numSouvenirs) ?? @string/main_numSouvenirsError}"
                    tools:text="Souvenirs: 20" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:id="@+id/btn_main_headerSearchIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/main_menuBar_size"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/main_searchButtonLabel"
...
            android:id="@+id/srl_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_souvenir_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:nestedScrollingEnabled="true"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
