...
            type="me.worric.souvenarius.ui.detail.DetailFragment.EditClickListener" />
        <variable
            name="currentSouvenir"
            type="me.worric.souvenarius.data.model.SouvenirDb" />
    </data>
    <ScrollView
        android:id="@+id/sv_detail_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:fillViewport="true"
        tools:context=".ui.main.MainActivity">

...
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_souvenir_photo_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...
