...
        <FrameLayout
            android:id="@+id/fl_main_fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main_addSouvenir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:goneUnless="@{viewmodel.fabState == FabState.ADD}"
            app:fabSize="normal"
            app:elevation="6dp"
...
