<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="me.worric.souvenarius.ui.main.MainViewModel" />
        <variable
            name="clickListener"
            type="me.worric.souvenarius.ui.signin.SignInFragment.ClickListener" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signin_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/til_signin_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_max="300dp"
            app:layout_constraintWidth_percent="0.75"
            app:errorEnabled="@{viewModel.hasEmailError}"
            app:errorText="@{viewModel.emailError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sign_in_email"
                android:text="@={viewModel.emailContent}"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_signin_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_signin_signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_signin_email"
            app:layout_constraintWidth_max="300dp"
            app:layout_constraintWidth_percent="0.75">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sign_in_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="@{viewModel.isConnected}"
            android:onClick="@{() -> clickListener.onSignInButtonClicked(viewModel.isConnected, etSigninEmail.text.toString.trim, etSigninPassword.text.toString.trim)}"
            android:text="@string/btn_label_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_signin_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signin_signin"
            android:enabled="@{viewModel.isConnected}"
            android:onClick="@{() -> clickListener.onCreateAccountButtonClicked()}"
            android:text="@string/btnlabel_signin_create" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
