...
    <string name="sign_in_notice">You need to sign in to use the app.</string>
    <string name="btn_label_sign_in">Sign in</string>
    <string name="btnlabel_signin_create">Create account</string>
    <string name="hint_sign_in_email">Email Address</string>
    <string name="hint_sign_in_password">Password</string>
    <string name="error_message_sign_in_invalid_email">Invalid Email</string>
    <string name="error_message_sign_in_empty_email_error">Empty email not allowed.</string>
    <string name="error_message_sign_in_empty_password_error">Empty password not allowed.</string>

    <!-- Create account fragment -->
    <string name="btnlabel_createaccount_create">Create Account</string>
    <string name="hint_createaccount_email">Email</string>
    <string name="hint_createaccount_password">Password</string>

...
